<resources>
    <string name="app_name">aFilmo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="movie_poster_image">Movie poster image</string>
    <string name="avans_logo">Avans Logo</string>
    <string name="upcoming">Upcoming</string>
    <string name="high_rated">High Rated</string>
    <string name="recommended">Recommended</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="genre">Genre</string>
    <string name="duur">Length</string>
    <string name="rating">Rating</string>
    <string name="titlefilter">Title</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_film_overview">Film Overview</string>
    <string name="dummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industries standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="meer">See more</string>
    <string name="filter">Filter</string>
    <string name="all_films">All movies</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="tagline">tagline</string>
    <string name="overview">Overview</string>
    <string name="todo">TODO</string>
    <string name="discover_films">Discover</string>
    <string name="Release_Date">Release Date</string>
    <string name="Top_rated">Top Rated</string>
    <string name="device_languages">EN</string>
    <string name="share">share</string>
    <string name="pref_header_language">Change language</string>
    <string name="movie_list_configurations">List management</string>
    <string name="configurations">Configuration</string>
    <string name="settings">Settings</string>
    <string name="slideshow" />
    <string name="mijn_lijsten">My Lists</string>
    <string name="aanmaken_lijsten">Create lists</string>
    <string name="delete_lijsten">Delete Lists</string>
    <string name="title_activity_create_lists">Create a list</string>
    <string name="title_activity_delete_lists">Delete a list</string>
    <string name="title_mylist">My Lists</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_mylist">"My Lists "</string>
    <string name="title_activity_favorites_list">Favorites List</string>
    <string name="title_loading">Loading screen</string>
    <string name="create_list_label">Create a new List!</string>
    <string name="Reviews">Reviews</string>
    <string name="give_a_rating_and_a_review">Give a rating</string>
    <string name="submit">Submit</string>
    <string name="give_rating_film_title">Film Title</string>
    <string name="trailers">Trailers</string>
    <string name="title_language_code">Language Code:</string>
    <string name="title_realName">Name:</string>
    <string name="title_username">Username:</string>
    <string name="title_adult">Adult Content available:</string>
    <string name="afilmo_banner">aFilmo</string>
    <string name="delete_instructions">Tap To Delete</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="company_banner">company banner</string>
    <string name="company"><u>aFilmo</u></string>
    <string name="version"><u>Version 1.0</u></string>
    <string name="developers"><u>Anjuli Jhakry - Luc Joosten - Tessa Numan - Stefan Ilmer</u></string>
    <string name="client"><u>Instructor: Ger Oosting</u></string>
    <string name="publication_date"><u>© 2018 - 2019 aFilmo B.V.</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="mylists">My Lists</string>
    <string name="select_a_genre_to_sort">Select a genre to sort the list</string>
    <string name="add_movie">Add Movie</string>
    <string name="select_a_movie_list">Select a Movie list to add the movie: </string>
    <string name="popup_select_list_title">List Title</string>
</resources>
