<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->

        <item android:title="@string/movie_list_configurations">
            <menu>
        <item
            android:id="@+id/nav_mijn_lijsten"
            android:icon="@drawable/mijn_lijsten_icon"
            android:title="@string/mijn_lijsten" />
        <item
            android:id="@+id/nav_aanmaken_lijst"
            android:icon="@drawable/aanmaken_lijsten_icon"
            android:title="@string/aanmaken_lijsten" />
                <item
            android:id="@+id/nav_delete_lijsten"
            android:icon="@drawable/delete_lijsten_icon"
            android:title="@string/delete_lijsten" />
            </menu>
        </item>
    <!--</group>-->

    <item android:title="@string/configurations">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/nav_settings_icon"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info_icon"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
