<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    android:scrollbars="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/company_banner"
                android:foreground="@drawable/banner"
                app:srcCompat="@drawable/banner" />

            <TextView
                android:id="@+id/naam_bedrijf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/company"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/app_versie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/version"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/oprichters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/developers"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/opdracht_gever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/client"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/datum_publicatie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/publication_date"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="25sp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".MapsActivity" />
        </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>