<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD774E7">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:scaleType="fitEnd"
        android:src="@drawable/close_btn"
        android:tint="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="504dp"
        android:text="@string/give_a_rating_and_a_review"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/rating_film_title"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="422dp"
        android:text="@string/give_rating_film_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="231dp"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="15sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginBottom="296dp"
        android:numStars="5"
        android:stepSize="0.5" />


</RelativeLayout>