<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
        app:layout_constraintVertical_bias="0.16000003">

        <LinearLayout
            android:id="@+id/linearlayout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">


            <ImageView
                android:id="@+id/logo_imgview"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/afilmo_banner"
                android:scaleX="1.1"
                android:scaleY="1.1"
                android:src="@drawable/banner" />


            <LinearLayout
                android:id="@+id/linearlayout_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativelayout_upcoming_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/upcoming_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/upcoming"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/see_more_upcoming_movies"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="330dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:shadowColor="#A8A8A8"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/meer"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movies_list_upcoming_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/relativelayout_discover_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/discover_movies_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/discover_films"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/see_more_discover_movies_button"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="330dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/colorPrimary"
                        android:shadowColor="#A8A8A8"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/meer"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movies_list_discover_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                </android.support.v7.widget.RecyclerView>


                <RelativeLayout
                    android:id="@+id/relativelayout_high_rated_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/high_rated_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="15dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/high_rated"
                        android:textColor="#fff"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/see_more_high_rated_movies"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="330dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/colorPrimary"
                        android:shadowColor="#A8A8A8"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/meer"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movies_list_high_rated_rv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="75dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="530dp"
        app:layout_constraintTop_toBottomOf="parent">

        <!-- Main content -->

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:elevation="2dp"
            app:itemIconTint="#fff"
            app:itemTextColor="@color/colorNavText"
            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
            app:menu="@menu/navigation" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>