<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GUI.Activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-355dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_marginStart="400dp"
            android:layout_marginEnd="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Avatar -->
                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="20dp"
                    android:src="@mipmap/movieappicon" />

                <!-- username title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <!-- user name account -->
                <TextView
                    android:id="@+id/username_tv"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <!-- adult content title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_adult"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <!-- adult content account -->
                <TextView
                    android:id="@+id/adult_tv"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <!-- Language code title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_language_code"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <!-- Language code account -->
                <TextView
                    android:id="@+id/language_tv"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:visibility="visible" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>